# screenshot-translator

./: .gitattributes  .gitignore  AGENTS.md  BUG.md  GHOST_WINDOW_FIX_HANDOFF.md  LICENSE.md  README.md  README.zh-CN.md  YsnTrans.lnk  add_chapter151.py  annotation_funcs.json  app.py  apply_ocr_final.py  apply_ocr_hook.py  build.bat  check_commercial.ps1  clean_all_cache.bat  dedupe.py  deploy_n100_translation_server.ps1  docs_updater.py  extract.py  extract_all.py  extract_perfect.py  extract_step.py  extract_step2.py  extract_step3.py  extract_step4.py  extract_step5.py  fix.py  fix_dup.py  fix_final.py  fix_final2.py  fix_final3.py  fix_final4.py  fix_hide2.py  fix_hide_app.py  fix_ocr2.py  fix_ocr3.py  fix_ocr4.py  fix_ocr5.py  (+35 more)
1/: zh-CN.ts.txt  (+2 more)
client/: CMakeLists.txt  config.cpp  config.h  localocrmanager.cpp  localocrmanager.h  main.cpp  networkclient.cpp  networkclient.h  ocrresultwindow.cpp  ocrresultwindow.h  screenshotwindow.cpp  screenshotwindow.h  settingspanel.cpp  settingspanel.h  switchbutton.cpp  switchbutton.h
tauri-client/src-tauri/: Cargo.toml  check_out.txt  tauri.conf.json
tauri-client/src-tauri/capabilities/: default.json
tauri-client/src-tauri/icons/: icon.icns
tauri-client/src-tauri/rapidocr/: rapidocr_runner.py  requirements.txt
tauri-client/src-tauri/rapidocr/ppocr_v6/: __init__.py  adapter.py  contract.py  detector.py  recognizer.py
tauri-client/src-tauri/resources/rapidocr/rapidocr-runner/_internal/: 81d243bd2c585b0f4821__mypyc.cp311-win_amd64.pyd  81d243bd2c585b0f4821__mypyc.cp312-win_amd64.pyd  _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _ssl.pyd  _uuid.pyd  _wmi.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
tauri-client/src-tauri/resources/rapidocr/rapidocr-runner/_internal/PIL/: _avif.cp312-win_amd64.pyd  _imaging.cp312-win_amd64.pyd  _imagingcms.cp312-win_amd64.pyd  _imagingft.cp312-win_amd64.pyd  _imagingmath.cp312-win_amd64.pyd  _imagingtk.cp312-win_amd64.pyd  _webp.cp312-win_amd64.pyd
tauri-client/src-tauri/resources/rapidocr/rapidocr-runner/_internal/bidi/: bidi.cp311-win_amd64.pyd  bidi.cp312-win_amd64.pyd
tauri-client/src-tauri/resources/rapidocr/rapidocr-runner/_internal/charset_normalizer/: cd.cp311-win_amd64.pyd  cd.cp312-win_amd64.pyd  md.cp311-win_amd64.pyd  md.cp312-win_amd64.pyd
tauri-client/src-tauri/resources/rapidocr/rapidocr-runner/_internal/cv2/: cv2.pyd
tauri-client/src-tauri/resources/rapidocr/rapidocr-runner/_internal/numpy-2.4.6.dist-info/: RECORD
tauri-client/src-tauri/resources/rapidocr/rapidocr-runner/_internal/pyclipper/: _pyclipper.cp311-win_amd64.pyd  _pyclipper.cp312-win_amd64.pyd
tauri-client/src-tauri/resources/rapidocr/rapidocr-runner/_internal/shapely/: _geometry_helpers.cp311-win_amd64.pyd  _geometry_helpers.cp312-win_amd64.pyd  (+4 more)
tauri-client/src-tauri/src/: app_paths.rs  config_store.rs  diagnostics.rs  file_commands.rs  history_commands.rs  hotkeys.rs  lib.rs  main.rs  rapid_ocr_commands.rs  recording_commands.rs  recording_overlay.rs  recording_process.rs  screenshot_commands.rs  screenshot_diagnostics_json.rs  screenshot_diagnostics_requests.rs  screenshot_dxgi_diagnostics_json.rs  screenshot_shared_buffer.rs  screenshot_wgc_diagnostic_commands.rs  screenshot_wgc_selected_output_diagnostic_commands.rs  screenshot_win32_diagnostics_json.rs  tests.rs  text_source.rs  window_control.rs  window_lifecycle.rs  window_targets.rs  ysn_ocr_crop.rs  ysn_ocr_decode.rs  ysn_ocr_dictionary.rs  ysn_ocr_manifest_store.rs  ysn_ocr_model_downloader.rs  ysn_ocr_model_index.rs  ysn_ocr_model_schema.rs  ysn_ocr_model_sources.rs  ysn_ocr_pipeline.rs  ysn_ocr_postprocess.rs  ysn_ocr_preprocess.rs  ysn_ocr_router.rs  ysn_ocr_runtime.rs  ysn_ocr_runtime_adapter.rs
tauri-client/src-tauri/src/rapid_ocr/: mod.rs  runner.rs  worker.rs
tauri-client/src-tauri/src/recording_process/: device_detector.rs  ffmpeg_installer.rs  mod.rs  process_manager.rs
tauri-client/src-tauri/src/screenshot_native/: candidates.rs  capability.rs  capture.rs  capture_router.rs  capture_router_tests.rs  d3d11_frame.rs  dxgi_capture.rs  dxgi_capture_tests.rs  dxgi_frame_info_probe.rs  dxgi_output.rs  dxgi_output_bridge_plan.rs  dxgi_output_bridge_smoke.rs  dxgi_presenter_smoke.rs  dxgi_probe.rs  dxgi_pulse_before_acquire_probe.rs  dxgi_readback.rs  dxgi_selected_output_acceptance.rs  dxgi_session.rs  dxgi_smoke.rs  dxgi_texture.rs  focus.rs  gpu.rs  gpu_device.rs  input.rs  mod.rs  monitor_output_mapping.rs  monitor_output_mapping_tests.rs  native_input_smoke.rs  native_overlay_session.rs  native_overlay_smoke.rs  native_route_readiness.rs  output.rs  overlay.rs  overlay_renderer.rs  presenter.rs  selected_image_bridge.rs  selected_output_clipboard.rs  selected_output_effects.rs  selected_readback_plan.rs  selected_readback_plan_tests.rs  (+21 more)
tauri-client/src-tauri/src/screenshot_native/dxgi_smoke/: selected_readback.rs  tests.rs  texture_acquisition.rs  types.rs
(+291 files in other folders)
